--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Situação do Aluno</title>
-  <link rel="stylesheet" href="teste.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="container">
@@ -13,6 +13,7 @@
     <pre id="resultado"></pre>
   </div>
 
-  <script src="teste.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
+
